--- a/src/components/Register.css
+++ b/src/components/Register.css
@@ -5,51 +5,57 @@ body {
     font-family: Arial, sans-serif;
     background-color: #000;
     color: #fff;
-  }
-  
-  .register-container {
+}
+
+.register-container {
     display: flex;
     justify-content: center;
     align-items: center;
     height: 100vh;
     background-color: #000;
-  }
-  
-  .register-card {
+}
+
+.register-card {
     background-color: #1a1a1a;
     padding: 4rem; /* Same increased padding */
     border-radius: 10px;
     box-shadow: 0 8px 16px rgba(0, 0, 0, 0.3);
     transition: transform 0.3s ease;
-  }
-  
-  .register-card:hover {
+}
+
+.register-card:hover {
     transform: scale(1.05);
-  }
-  
-  h2 {
+}
+
+h2 {
     text-align: center;
     margin-bottom: 2rem;
     font-size: 2rem; /* Same increased font size */
-  }
-  
-  .input-group {
+}
+
+.input-group {
     margin-bottom: 1rem;
-  }
-  
-  .input-group label {
+}
+
+.input-group label {
     font-size: 1.2rem; /* Increase label font size */
-  }
-  
-  .input-group input {
+}
+
+.input-group input {
     padding: 1rem; /* Increase input padding */
     font-size: 1rem; /* Increase input font size */
     width: 100%;
     border: none;
     border-radius: 5px;
-  }
-  
-  button[type="submit"] {
+}
+
+.button-container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+button[type="submit"] {
     padding: 1rem 1.5rem; /* Increase button padding */
     font-size: 1rem; /* Increase button font size */
     background-color: #1db954;
@@ -58,9 +64,8 @@ body {
     border-radius: 5px;
     cursor: pointer;
     transition: background-color 0.3s ease;
-  }
-  
-  button[type="submit"]:hover {
+}
+
+button[type="submit"]:hover {
     background-color: #1ed760;
-  }
-  
+}
